--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
 PORT = 5050
+DB = mongodb+srv://newsdb:ma083r5eka@cluster0.an7mjf4.mongodb.net/?retryWrites=true&w=majority
+JWTPRIVATEKEY = sherdorbek_vs_mansurbek_smile_team_0406uz
+SALT = 10
